# kokoro-reader

./: .gitignore  README.md  audio_player.py  clipboard_handler.py  concept.md  config.py  hello.py  hotkey_listener.py  main.py  note.md  pyproject.toml  requirements  tray_app.py
