[project]
name = "kokoro-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro>=0.9.4",
    "misaki[zh]>=0.9.4",
    "pynput>=1.8.1",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
]
